--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -37,8 +37,7 @@
     min-width: 100%;
     min-height: 100%;
 
-    //background-color: rgb(0, 50, 75);
-    background-color: darkgoldenrod;
+    gitgbackground-color: rgb(0, 50, 75);
   }
   .labels {
     grid-area: label;
