--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -39,6 +39,7 @@
 
     background-color: rgb(0, 50, 75);
   }
+
   .labels {
     grid-area: label;
     margin-bottom: 15px;
@@ -232,21 +233,29 @@
 
     color: rgb(255, 255, 255);
   }
-  #dynamic-timer-circle-svg{
-  
+
+  #circle-path {
+    stroke-width: 7px;
+    fill: none;
+    stroke: green;
+    stroke-linecap: round;
+    transform: rotate(95deg);
+    transition: 1s linear all;
+    //transform-origin: center;
   }
 
   // .................MEDIA QUERIES..............................
-  @media screen and (max-width: 576px) {
-    // for mobile phones
-    #container {
-      grid-template-areas:
-        "circle"
-        // "circle"
-        "session"
-        "break";
-      grid-template-columns: 1fr;
-    }
+
+    @media screen and (max-width: 576px) {
+      // for mobile phones
+      #container {
+        grid-template-areas:
+          "circle"
+          // "circle"
+          "session"
+          "break";
+        grid-template-columns: 1fr;
+      }
 
     #circle {
       margin-top: 10%;
@@ -261,6 +270,7 @@
 
         font-size: 4vw;
       }
+
       #time-left {
         padding: 0;
 
@@ -288,6 +298,7 @@
       font-size: 10vw;
       align-self: center;
     }
+
     .settings-buttons {
       flex-basis: 17%;
     }
