added function to change ring color based on remaining time

--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -244,7 +244,7 @@
   #circle-path {
     stroke-width: 10px;
     fill: none;
-    stroke: green;
+    //stroke: green;
     stroke-linecap: round;
     transform: rotate(95deg);
     transition: 1s linear all;
