--- a/Main_Folder/MY_PROJECTS/random-quote-gen/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/random-quote-gen/src/App.scss
@@ -5,22 +5,22 @@
 
 .App {
   .colorTransition{
-      transition: color 1s ease-out,opacity 1s;
-      //animation: blinker 4s ease-out ;
+      //transition: color 1s ease-out,opacity 1s;
+      animation: blinker 2s ;
     }
     @keyframes blinker {
-  0% {
+  /* 0% {
+    opacity: 0;
+  } */
+  50%{
     opacity: 0;
   }
-  10%{
-    opacity: 0;
-  }
-  70%{
+  100%{
     opacity: 100;
   }
 }
 .bgColorTransition{
-  transition: background-color 1s
+  transition: background-color s
 }
   #wrapper{
     opacity: 1;
