callback refs for my buttons + conditional classes to enable blinking animation on click

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -2,12 +2,23 @@
   text-align: center;
 }
 
+.pad-keys{
+  color:red;
+  animation: blink 1s;
+}
+@keyframes blink {
+  0%{
+    background-color: red;
+  }
+  100%{
+    background-color: black;
+  }
+}
 
 /*#id{
   display: grid;
-  grid-template-areas: 
+  grid-template-areas:
   "toggle . . . . slider"
   "display display display display display slider"
   ". . . . . slider";
 }*/
-
