started working on right hand side of new design

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -15,6 +15,13 @@
   }
 }
 
+#indicators-row{
+max-height: 10vh;
+height: 10vh;
+}
+svg{
+max-height: 100%;
+}
 /*#id{
   display: grid;
   grid-template-areas:
