--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -1,7 +1,29 @@
 .App {
   text-align: center;
 }
+.btn{
+    border-radius: 10%;
+    /* height: 5rem;
+    width: 5rem; */
+}
+.drum-btn{
+  width: 18%;
+  height: 75%;
+}
 
+#pad{
+    //width: 20rem;
+    margin:0;
+    padding:0;
+}
+.pad-row{
+  justify-content: space-evenly;
+  align-items: center;
+  width: 75%;
+  height: 25%;
+  margin: 0;
+  background-color: green;
+}
 .pad-keys{
   color:red;
   animation: blink 1s;
@@ -14,6 +36,7 @@
     background-color: black;
   }
 }
+
 
 #indicators-row{
 max-height: 10vh;
