--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -7,22 +7,25 @@
     width: 5rem; */
 }
 .drum-btn{
-  width: 18%;
-  height: 75%;
+  width: 7vw;
+  height: 7vw;
 }
+
+
 
 #pad{
     //width: 20rem;
     margin:0;
+    //margin-bottom: 10%;
     padding:0;
 }
 .pad-row{
   justify-content: space-evenly;
   align-items: center;
-  width: 75%;
-  height: 25%;
+  width: 100%;
+  height: 9vw;
   margin: 0;
-  background-color: green;
+  //background-color: green;
 }
 .pad-keys{
   color:red;
