--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -18,6 +18,7 @@
     margin:0;
     //margin-bottom: 10%;
     padding:0;
+    // background-color: red;
 }
 .pad-row{
   justify-content: space-evenly;
@@ -48,6 +49,7 @@ height: 10vh;
 svg{
 max-height: 100%;
 }
+
 /*#id{
   display: grid;
   grid-template-areas:
