--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -52,6 +52,10 @@ svg{
 max-height: 100%;
 }
 
+#left-side{
+  $enable-grid-classes: false;
+  $enable-cssgrid: true
+}
 /*#id{
   display: grid;
   grid-template-areas:
