--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -11,6 +11,10 @@
   height: 7vw;
 }
 
+.vynil-grey-parts{
+  fill: rgba(30,30,30,1);
+}
+
 svg{
  filter:drop-shadow( -10px 10px 5px rgb(0 0 0 /0.4));
 }
