reversed css grid enabling and integrated slider to left pane

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -18,6 +18,11 @@
 svg{
  filter:drop-shadow( -10px 10px 5px rgb(0 0 0 /0.4));
 }
+.slider{
+  /* max-height: 10px;
+   height:10px; */
+  width:100vh;
+}
 
 #pad{
     //width: 20rem;
