--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -1,37 +1,40 @@
 .App {
   text-align: center;
 }
-.btn{
-    border-radius: 10%;
-    /* height: 5rem;
+.btn {
+  border-radius: 10%;
+  /* height: 5rem;
     width: 5rem; */
 }
-.drum-btn{
+.drum-btn {
   width: 7vw;
   height: 7vw;
 }
 
-.vynil-grey-parts{
-  fill: rgba(30,30,30,1);
+.vynil-grey-parts {
+  fill: rgba(30, 30, 30, 1);
 }
 
-svg{
- filter:drop-shadow( -10px 10px 5px rgb(0 0 0 /0.4));
+svg {
+  filter: drop-shadow(-10px 10px 5px rgb(0 0 0 /0.4));
 }
-.slider{
+.slider {
   /* max-height: 10px;
    height:10px; */
-  width:100vh;
+  // width:10vw;
+  grid-area: slider;
+  appearance: slider-vertical;
+  width: 1vw;
 }
 
-#pad{
-    //width: 20rem;
-    margin:0;
-    //margin-bottom: 10%;
-    padding:0;
-    // background-color: red;
+#pad {
+  //width: 20rem;
+  margin: 0;
+  //margin-bottom: 10%;
+  padding: 0;
+  // background-color: red;
 }
-.pad-row{
+.pad-row {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
@@ -39,29 +42,36 @@ svg{
   margin: 0;
   //background-color: green;
 }
-.pad-keys{
-  color:red;
+.pad-keys {
+  color: red;
   animation: blink 1s;
 }
 @keyframes blink {
-  0%{
+  0% {
     background-color: red;
   }
-  100%{
+  100% {
     background-color: black;
   }
 }
 
-
-#indicators-row{
-max-height: 10vh;
-height: 10vh;
+#indicators-row {
+  max-height: 10vh;
+  height: 10vh;
 }
-svg{
-max-height: 100%;
+svg {
+  max-height: 100%;
 }
+#left-side {
+  display: grid;
+  grid-template-areas:
+    " . vinyl vinyl"
+    " slider vinyl vinyl";
+}
+#vinyl {
+  grid-area: vinyl;
 
-
+}
 /*#id{
   display: grid;
   grid-template-areas:
