--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -18,27 +18,37 @@
 svg {
   filter: drop-shadow(-10px 10px 5px rgb(0 0 0 /0.4));
 }
-.slider {
-  /* max-height: 10px;
-   height:10px; */
-  // width:10vw;
-  grid-area: slider;
-  appearance: slider-vertical;
-  width: 1%;
-  height: 400px;
-
-  background: red;
-  opacity: 0.5s;
-
-.slider::-webkit-slider-thumb {
-
- cursor: pointer;
- appearance: none;
- width: 10px;
- height: 10px;
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  height: 20px;
+  appearance: none;
+  background: red; /* Otherwise white in Chrome */
 }
 
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 20px;
+  width: 20px;
+  background-color: green;
+  // color: green;
+
 }
+
+// input[type=range]:focus {
+//   outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+// }
+
+// input[type=range]::-ms-track {
+//   width: 100%;
+//   cursor: pointer;
+
+//   /* Hides the slider so custom styles can be added */
+//   background: transparent;
+//   border-color: transparent;
+//   color: transparent;
+// }
 
 #pad {
   //width: 20rem;
@@ -83,7 +93,6 @@ svg {
 }
 #vinyl {
   grid-area: vinyl;
-
 }
 /*#id{
   display: grid;
