--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -21,7 +21,7 @@ svg {
 input[type=range] {
   -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
   width: 100%; /* Specific width is required for Firefox. */
-  height: 20px;
+  height: 33%;
   appearance: none;
   background: red; /* Otherwise white in Chrome */
 }
