--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -10,37 +10,34 @@
   width: 7vw;
   height: 7vw;
 }
-
-.vynil-grey-parts {
-  fill: rgba(30, 30, 30, 1);
+#indicators-row {
+  max-height: 10vh;
+  height: 10vh;
 }
 
-svg {
-  filter: drop-shadow(-10px 10px 5px rgb(0 0 0 /0.4));
-}
-input[type=range],.slider {
-     -webkit-appearance: slider-vertical; /* Hides the slider so that custom slider can be made */
-   //width: 10vh; /* Specific width is required for Firefox. */
-   height: 33%;
+input[type="range"],
+.slider {
+  -webkit-appearance: slider-vertical; /* Hides the slider so that custom slider can be made */
+  //width: 10vh; /* Specific width is required for Firefox. */
+  height: 33%;
   //  margin-top: auto;
   //  margin-bottom:auto;
   /* margin-top: 95vh;
    margin-left: -20vw;
    margin-right: 0; */
-    appearance: slider-vertical;
+  appearance: slider-vertical;
   background: red; /* Otherwise white in Chrome */
   border: solid yellow;
   grid-area: slider;
 }
 
-input[type=range]::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   height: 20px;
   width: 20px;
   background-color: green;
   // color: green;
-
 }
 
 // input[type=range]:focus {
@@ -57,6 +54,14 @@ input[type=range]::-webkit-slider-thumb {
 //   color: transparent;
 // }
 
+#left-side {
+  // display: grid;
+  // grid-template-areas:
+  //   " . vinyl  "
+  //   " slider vinyl ";
+  //   grid-template-columns: 10% 1fr ;
+}
+
 #pad {
   //width: 20rem;
   margin: 0;
@@ -64,14 +69,7 @@ input[type=range]::-webkit-slider-thumb {
   padding: 0;
   // background-color: red;
 }
-.pad-row {
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  height: 9vw;
-  margin: 0;
-  //background-color: green;
-}
+
 .pad-keys {
   color: red;
   animation: blink 1s;
@@ -85,28 +83,35 @@ input[type=range]::-webkit-slider-thumb {
   }
 }
 
-#indicators-row {
-  max-height: 10vh;
-  height: 10vh;
+.pad-row {
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 9vw;
+  margin: 0;
+  //background-color: green;
 }
-svg {
-  max-height: 100%;
-}
-#left-side {
-  // display: grid;
-  // grid-template-areas:
-  //   " . vinyl  "
-  //   " slider vinyl ";
-  //   grid-template-columns: 10% 1fr ;
-}
+
 #vinyl {
   // grid-area: vinyl;
   //border:solid grey;
   //margin-left:-350px;
 }
-#vinyl-container{
+#vinyl-container {
   grid-area: vinyl;
 }
+
+.vynil-grey-parts {
+  fill: rgba(30, 30, 30, 1);
+}
+
+svg {
+  filter: drop-shadow(-10px 10px 5px rgb(0 0 0 /0.4));
+  max-height: 100%;
+  overflow: visible;
+}
+
+
 /*#id{
   display: grid;
   grid-template-areas:
