started restructuring of calculator

--- a/Main_Folder/MY_PROJECTS/calculator/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/calculator/src/App.scss
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  color: aliceblue;
+  background-color: #282c34;
+  height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +38,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+.container{
+    border:red solid;
 }
