Provided basic responsive layout for all major mobile/tablets sizes + added personal styling sheet ref to SYNCH folder

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.css
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.css
@@ -1,1 +1,1 @@
-.App{text-align:center}/*# sourceMappingURL=App.css.map */
+.App{text-align:center}.pad-keys{color:red;animation:blink 1s}@keyframes blink{0%{background-color:red}100%{background-color:#000}}/*# sourceMappingURL=App.css.map */
