--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -1,15 +1,3 @@
-/*{
-  -display/layout
-  -position
-  -margin
-  -border
-  -dimensions
-  -padding
-  -background-colors
-  -typography
-  -color
-}*/
-
 .App {
   height: 100vh;
   min-height: 100vh;
@@ -290,12 +278,12 @@
 
     #session {
       margin-top: 0;
-      border: solid grey;
+      // border: solid grey;
     }
 
     #break {
       margin-top: 0;
-      border: solid grey;
+      // border: solid grey;
     }
 
     #start-pause-refresh-buttons {
@@ -310,6 +298,87 @@
 
     .settings-buttons {
       flex-basis: 17%;
+    }
+  }
+
+  @media screen and (min-width: 576px) and (max-width: 1024px) {
+    //for tablets
+
+    #container {
+      display: grid;
+      grid-template-areas:
+        " circle circle circle "
+        //". circle ."
+        "session . break";
+      grid-template-columns: 40% 1fr 40%;
+      //grid-template-rows: auto ;
+
+      width: 100%;
+      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
+      min-width: 100%;
+      min-height: 100%;
+
+      background-color: rgb(0, 50, 75);
+    }
+
+    #dynamic-timer-circle-svg {
+      width: 90vw;
+    }
+
+    #circle {
+      margin-top: 30%;
+
+      //width: 1vw;
+      aspect-ratio: 1 / 1;
+
+      font-size: 3.5vw;
+
+      #timer-label {
+        margin-left: -10%;
+
+        font-size: 4vw;
+      }
+
+      #time-left {
+        margin-left: -1%;
+        padding: 0;
+
+        font-size: 26.5vw;
+        line-height: 85%;
+      }
+    }
+
+    #session {
+      margin-top: 50%;
+      //border: solid grey;
+
+      .length-values {
+        font-size: 7vw;
+        align-self: center;
+        margin: 0% 2% 0% 2%;
+      }
+    }
+
+    #break {
+      margin-top: 50%;
+      // border: solid grey;
+
+      .length-values {
+        font-size: 7vw;
+        align-self: center;
+        margin: 0% 2% 0% 2%;
+      }
+    }
+
+    #start-pause-refresh-buttons {
+      min-width: 60%;
+      max-width: 50%;
+    }
+
+    .settings-buttons {
+      flex-basis: 25%;
     }
   }
 }
