changed header rock paper scissors header color + updated sass files

--- a/Main_Folder/MY_PROJECTS/rock_paper_scissors/styles.scss
+++ b/Main_Folder/MY_PROJECTS/rock_paper_scissors/styles.scss
@@ -5,14 +5,14 @@ html,body,section,div,header,img,footer,p,h1,h2,button{
 
 body{
   background-color: green;
- 
+
   overflow-y: auto;
- 
+
 }
 
 h1{
- 
-  background-color: blue;
+
+   background-color: red;
   text-align: center;
   height: fit-content;
 
@@ -55,5 +55,3 @@ h1{
     }
   }
 }
-
-
