--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -1,115 +1,120 @@
-.App{
+.App {
   background-color: purple;
   width: 100vw;
-  max-width:100vw;
+  max-width: 100vw;
   height: 100vh;
   max-height: 100vh;
   margin: 0;
   padding: 0;
   //overflow-y: hidden;
 }
-.btn {
-  border-radius: 10%;
-}
-.drum-btn {
-  width: 7vw;
-  height: 7vw;
-  font-size: 40px;
-}
 
-#indicators-row {
-  max-height: 10vh;
-  height: 10vh;
-}
+@media (width<576px) {
+  .btn {
+    border-radius: 10%;
+  }
+  .h-sm-40 {
+    height: 40% !important;
+  }
+  .h-sm-60 {
+    height: 60% !important;
+    //max-height: 60% !important;
+  }
 
-input[type="range"],
-.slider {
-  -webkit-appearance: slider-vertical; /* Hides the slider so that custom slider can be made */
-  //width: 10vh; /* Specific width is required for Firefox. */
-  height: 33%;
-  //  margin-top: auto;
-  //  margin-bottom:auto;
-  /* margin-top: 95vh;
+  .drum-btn {
+    width: 18%;
+    aspect-ratio: 1/1;
+  }
+
+  #indicators-row {
+    max-height: 10vh;
+    height: 10vh;
+  }
+
+  input[type="range"],
+  .slider {
+    -webkit-appearance: slider-vertical; /* Hides the slider so that custom slider can be made */
+    //width: 10vh; /* Specific width is required for Firefox. */
+    height: 33%;
+    //  margin-top: auto;
+    //  margin-bottom:auto;
+    /* margin-top: 95vh;
    margin-left: -20vw;
    margin-right: 0; */
-  appearance: slider-vertical;
-  background: red; /* Otherwise white in Chrome */
-  border: solid yellow;
-  grid-area: slider;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  height: 20px;
-  width: 20px;
-  background-color: green;
-  // color: green;
-}
-
-// input[type=range]:focus {
-//   outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
-// }
-
-// input[type=range]::-ms-track {
-//   width: 100%;
-//   cursor: pointer;
-
-//   /* Hides the slider so custom styles can be added */
-//   background: transparent;
-//   border-color: transparent;
-//   color: transparent;
-// }
-
-#pad {
-  //width: 20rem;
-  margin: 0;
-  //margin-bottom: 10%;
-  padding: 0;
-  // background-color: red;
-}
-
-.pad-keys {
-  color: red;
-  animation: blink 1s;
-}
-@keyframes blink {
-  0% {
-    background-color: red;
+    appearance: slider-vertical;
+    background: red; /* Otherwise white in Chrome */
+    border: solid yellow;
+    grid-area: slider;
   }
-  100% {
-    background-color: black;
+
+  input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 20px;
+    width: 20px;
+    background-color: green;
+    // color: green;
   }
-}
 
-.pad-row {
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  height: 9vw;
-  margin: 0;
-  //background-color: green;
-}
+  // input[type=range]:focus {
+  //   outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+  // }
 
+  // input[type=range]::-ms-track {
+  //   width: 100%;
+  //   cursor: pointer;
 
+  //   /* Hides the slider so custom styles can be added */
+  //   background: transparent;
+  //   border-color: transparent;
+  //   color: transparent;
+  // }
 
-.vinyl-grey-parts {
-  fill: rgba(30, 30, 30, 1);
+  #pad {
+    //width: 20rem;
+    margin: 0;
+    //margin-bottom: 10%;
+    padding: 0;
+    // background-color: red;
+  }
 
-}
+  .pad-keys {//toggled only on click
+    color: red;
+    animation: blink 1s;
+  }
+  @keyframes blink {
+    0% {
+      background-color: red;
+    }
+    100% {
+      background-color: black;
+    }
+  }
 
-svg {
-  filter: drop-shadow(-10px 10px 5px rgb(0 0 0 /0.4));
-  max-height: 100%;
-  overflow: visible;
-}
+  .pad-row {
+    justify-content: space-evenly;
+    align-items: start;
+    width: 100%;
+    height: 33%;
+    max-height: 33%;
+    margin: 0 0 5% 0;
+    padding:0;
+    //background-color: green;
+  }
 
-@media (width<576px){
-  .h-sm-50{
-    height: 50% !important;
+  .vinyl-grey-parts {
+    fill: rgba(30, 30, 30, 1);
+  }
+
+  svg {
+    filter: drop-shadow(-10px 10px 5px rgb(0 0 0 /0.4));
+    max-height: 100%;
+    overflow: visible;
   }
 }
 
+@media (width>576px) {
+}
 /*#id{
   display: grid;
   grid-template-areas:
