implemented responsive design + alignments for majority of tablets

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -127,6 +127,14 @@
   .pad-row {
     margin: 0 0 2% 0;
   }
+
+  .me-med{
+    margin-right: 8% !important;
+  }
+}
+
+@media(width>992px){
+  
 }
 /*#id{
   display: grid;
