- fixed issue where clicking new quote too soon momentarily bugs the re-render

--- a/Main_Folder/MY_PROJECTS/random-quote-gen/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/random-quote-gen/src/App.scss
@@ -10,12 +10,17 @@
     /* 0% {
     opacity: 0;
   } */
-
+    5%{
+      opacity: 0;
+    }
     25% {
       opacity: 0;
     }
     50% {
-      opacity: 0;
+      opacity: 25;
+    }
+    75%{
+      opacity: 50;
     }
     100% {
       opacity: 100;
