--- a/Main_Folder/MY_PROJECTS/rock_paper_scissors/styles.scss
+++ b/Main_Folder/MY_PROJECTS/rock_paper_scissors/styles.scss
@@ -2,14 +2,17 @@
   margin:0;
   padding:0
 }
+:root{
+  --theme-color:rgb(0, 0, 56);
+}
 body {
-  background-color: green;
-
+  //background-color: green;
+color: white;
   overflow-y: auto;
 }
 
 h1 {
-  background-color: red;
+  background-color: var(--theme-color);
   text-align: center;
   height: fit-content;
 }
@@ -18,7 +21,7 @@ h1 {
   height: 100vh;
   display: flex;
   align-items: center;
-  background-color: red;
+  background-color: var(--theme-color);
 
   #game-row {
     width: 100%;
