--- a/Main_Folder/MY_PROJECTS/calculator/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/calculator/src/App.scss
@@ -15,10 +15,19 @@ eq-height{
   height:20%;
   //margin-bottom:10%;
 }
-
+.h-equal-sign{
+  height:40%;
+}
 .h-80{
   height:80%;
 }
+
+.top-row-buttons{
+  height:80%;
+  margin:auto 0 auto 0;
+   border-radius:0.25rem
+}
+
 
 
 /* .App-logo {
