fully finished button positioning/layout

--- a/Main_Folder/MY_PROJECTS/calculator/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/calculator/src/App.scss
@@ -18,11 +18,17 @@ eq-height{
 .h-equal-sign{
   height:40%;
 }
+.h-40{
+  height:40%;
+}
 .h-80{
   height:80%;
 }
+.h-90{
+  height:90%;
+}
 .h-200{
-  height:187%;
+  height:180%;
 }
 
 .top-row-buttons{
