finished buttons layout with css grid

--- a/Main_Folder/MY_PROJECTS/calculator/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/calculator/src/App.scss
@@ -1,59 +1,73 @@
-@import './custom.scss';
-.App{
-  height:100vh;
-  max-height: fill-available;
-}
-.fill-avail{
-  height: fill-available;
-  max-height: fill-available;
+@import "./custom.scss";
+
+#keys-grid-container {
+	display: grid;
+	grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	gap: 1%;
 }
 
-eq-height{
-  max-height:min-content
+.wide-btns {
+	grid-column-start: 0;
+	grid-column-end: span 2;
 }
 
-.h-20{
-  height:20%;
-  //margin-bottom:10%;
+.equal-btn {
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 4;
+	grid-row-end:  6;
 }
-.h-equal-sign{
-  height:40%;
+.App {
+	height: 100vh;
+	max-height: fill-available;
 }
-.h-40{
-  height:40%;
-}
-.h-80{
-  height:100%;
-}
-.h-90{
-  height:90%;
-}
-.h-200{
-  height:calc(100% + 0.5rem);
+.fill-avail {
+	height: fill-available;
+	max-height: fill-available;
 }
 
-.top-row-buttons{
-  height:100%;
-  margin:auto 0 auto 0;
-   border-radius:0.25rem
+.h-20 {
+	height: 20%;
+	//margin-bottom:10%;
+}
+.h-equal-sign {
+	height: 40%;
+}
+.h-40 {
+	height: 40%;
+}
+.h-80 {
+	height: 100%;
+}
+.h-90 {
+	height: 90%;
+}
+.h-200 {
+	height: calc(100% + 0.5rem);
 }
 
-.bg-color{
-  // background-color: midnightblue;
-  background-color: #1E3D58;
-}
-.bg-color2{
-  background-color: #050533;
+.top-row-buttons {
+	height: 100%;
+	margin: auto 0 auto 0;
+	border-radius: 0.25rem;
 }
 
-.bg-color3{
-  background-color: #E8EEF1;
+.bg-color {
+	// background-color: midnightblue;
+	background-color: #1e3d58;
+}
+.bg-color2 {
+	background-color: #050533;
 }
 
-.bg-color4{
-  background-color: #A92420;
+.bg-color3 {
+	background-color: #e8eef1;
 }
 
+.bg-color4 {
+	background-color: #a92420;
+}
 
 /* .App-logo {
   height: 40vmin;
