--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -8,50 +8,16 @@ li {
 	margin: 0;
 	padding: 0;
 }
+
 .alignment-boxes {
 	flex: 1 1 46.66%;
 	height: 100%;
 	margin: 0;
-  padding:0;
+	padding: 0;
 	//border: 0.1rem solid green;
 }
 
-#profile-picture {
-	margin-left: 16px;
-	margin-top: 10px;
-	width: 32px;
-	height: 32px;
-	border-radius: 50%;
-	padding: 0;
-	//border: 0.1rem solid red;
-}
 
-#twitter-logo {
-					/* 	width: 4rem;
-					border-radius: 75%;
-					margin-left: -1.2rem;
-					margin-top: 0.5rem;
-					margin-bottom: 1.66rem; */
-					//width: 100%;
-					height: 24px;
-					padding:0;
-          margin:0;
-          flex:0 1 auto;
-          
-          //width: min-content;
-					//justify-self:center;
-				}
-
-/*  {
-          width:32px;
-          height:32px;
-          border-radius: 50%;
-//margin-left:16px;
-          margin-top:10px;
-          padding:0;
-          border:0.1rem solid red;
-
-        }; */
 
 #App {
 	display: flex;
@@ -152,14 +118,9 @@ li {
 	#middle-container {
 		flex: 0 0 100%;
 		overflow-y: scroll;
-
-		#timeline-div {
-			width: 100%;
-			height: 100vh;
-			#header {
-				height: 106px;
-				border-bottom: 0.1rem solid grey;
-			}
+		#header {
+			height: 106px;
+			border-bottom: 0.1rem solid grey;
 			#header-top {
 				display: flex;
 				justify-content: center;
@@ -167,37 +128,86 @@ li {
 				font-size: 1.2rem;
 				font-weight: bold;
 				height: 3.2rem;
-
-
-			}
-			#tweet-area {
-				display: none;
-				justify-content: space-between;
-
-				img {
-					width: 3rem;
-					height: 3rem;
+				#profile-picture {
+					margin-left: 16px;
+					margin-top: 10px;
+					width: 32px;
+					height: 32px;
 					border-radius: 50%;
-					align-self: center;
-					margin-left: 1rem;
-					margin-top: -0.9rem;
+					padding: 0;
+					//border: 0.1rem solid red;
 				}
-				#tweet-input {
-					width: 87%;
-					height: 5rem;
-					border: none;
-				}
-				::placeholder {
-					font-size: 1.23rem;
 
-					color: black;
-					opacity: 0.7;
-				}
-				#tweet-input:focus {
-					outline: 0;
+				#twitter-logo {
+					height: 24px;
+					padding: 0;
+					margin: 0;
+					flex: 1 1 auto;
 				}
 			}
-			#icons-row {
+			#header-bottom {
+				height: 50%;
+				display: flex;
+				flex-direction: column;
+				justify-content: end;
+				border-bottom: 0px;
+				ul {
+					display: flex;
+					justify-content: space-evenly;
+					margin-top: auto;
+					margin-bottom: auto;
+					text-decoration: none;
+					list-style: none;
+					a {
+						margin: 0;
+						padding: 0;
+						flex: 1 1 auto;
+						display: flex;
+						justify-content: center;
+						li {
+							font-size: 15px;
+							font-weight: 500;
+							line-height: 20px;
+							color: grey;
+						}
+					}
+				}
+			}
+		}
+    #tweet-area {
+	display: none;
+	justify-content: space-between;
+	img {
+		width: 3rem;
+		height: 3rem;
+		border-radius: 50%;
+		align-self: center;
+		margin-left: 1rem;
+		margin-top: -0.9rem;
+	}
+	#tweet-input {
+		width: 87%;
+		height: 5rem;
+		border: none;
+	}
+	::placeholder {
+		font-size: 1.23rem;
+
+		color: black;
+		opacity: 0.7;
+	}
+	#tweet-input:focus {
+		outline: 0;
+	}
+}
+
+		#timeline-div {
+			width: 100%;
+			//height: 100vh;
+
+
+		}
+    #icons-row {
 				padding: 0 0 1rem 5rem;
 				display: none;
 				justify-content: space-between;
@@ -226,7 +236,6 @@ li {
 					margin-right: 1rem;
 				}
 			}
-		}
 	}
 
 	#middle-container::-webkit-scrollbar {
