--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1,5 +1,5 @@
-:root{
-  --top-section-height:106px
+:root {
+	--top-section-height: 106px;
 }
 
 section,
@@ -23,7 +23,13 @@ li {
 
 #App {
 	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	height: 100vh;
+	/*width: 100vw;
+	max-width: 100vw; */
+	margin: 0;
+	padding: 0;
 	overflow-x: hidden;
 	overflow-y: hidden;
 	background-color: white;
@@ -32,14 +38,26 @@ li {
 	color: black;
 	section {
 		height: 100%;
+		width: 100vw;
+		margin: 0;
+		padding: 0;
 	}
 	#left-container {
-		display: none;
+		z-index: 2;
+    border-top:0.01rem solid black;
+		position: fixed;
+		margin-top:calc(100vh - 53.5px);
+		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		align-items: end;
-		border-right: 0.05rem solid rgba(220, 220, 220, 0.3);
-		flex: 0 0 30.6%;
+		/* margin: 0; */
+		padding: 0;
+		//align-items: end;
+		border-right: solid rgba(220, 220, 220, 0.3);
+		height: 53.5px;
+		width: 100%;
+		//border: solid red;
+		background-color: white;
 		font-family: "Arimo", sans-serif;
 		font-size: 1.3rem;
 		nav {
@@ -73,6 +91,7 @@ li {
 				}
 
 				button {
+					display: none;
 					align-self: start;
 					font-weight: bold;
 					font-size: 1.1rem;
@@ -92,7 +111,7 @@ li {
 		}
 		#profile-pill-container {
 			width: 45%;
-			display: flex;
+			display: none;
 			justify-content: start;
 			padding-bottom: 1rem;
 		}
@@ -119,15 +138,17 @@ li {
 	}
 	#middle-container {
 		flex: 0 0 100%;
-    display: flex;
-    direction:column;
+		display: flex;
+		direction: column;
 		overflow-y: scroll;
+		order: 1;
+		z-index: 1;
 		#header {
-      position:fixed;
+			position: fixed;
 			height: var(--top-section-height);
-      width:100%;
-      background-color: rgba($color: #ffffff, $alpha: 0.8);
-      backdrop-filter:blur(10px);
+			width: 100%;
+			background-color: rgba($color: #ffffff, $alpha: 0.8);
+			backdrop-filter: blur(10px);
 			border-bottom: 0.1rem solid grey;
 			#header-top {
 				display: flex;
@@ -211,8 +232,7 @@ li {
 
 		#timeline-div {
 			width: 100%;
-      margin-top: var(--top-section-height);
-
+			margin-top: var(--top-section-height);
 		}
 		#icons-row {
 			padding: 0 0 1rem 5rem;
@@ -252,10 +272,10 @@ li {
 	#right-container {
 		display: none;
 		flex-direction: column;
-		gap: 1rem;
-		padding-left: 2rem;
-		border-left: 0.05rem solid rgba(220, 220, 220, 0.3);
-		flex: 0 0 37.2%;
+		//gap: 1rem;
+		//padding-left: 2rem;
+		//border-left: 0.05rem solid rgba(220, 220, 220, 0.3);
+		//flex: 0 0 37.2%;
 		input {
 			background-color: rgba(239, 243, 244, 255);
 			border-width: 0;
