--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -495,4 +495,18 @@ li {
 }
 
 @media only screen and (500px<=width<=688px) {
+#App{
+	flex-direction:row;
+}
+#left-container{
+	position:relative;
+	flex:1 1 auto;
+	margin:0;
+	height:100vh;
+	width:10%;
+	z-index:1;
+}
+#middle-container{
+	width:100%
+}
 }
